      \command{configure} will select commands for \command{g++} 6.x
      which conform to C++11 and C++14 where specified but otherwise use
      C++98.

      \item Support for the defunct IRIX and OSF/1 OSes and Alpha CPU
      has been removed.

      \item \command{configure} checks if the compiler specified by
      \samp{CXX} \samp{CXXFLAGS} is able to compile C++ code.
      
      \item \command{configure} checks for the required header
      \file{sys/select.h} (or \file{sys/time.h} on legacy systems) and
      system call \code{select} and aborts if they are not found.

      \item [In progress.] \command{configure} looks for a flag for the
      C++ compiler which approximates C++98/C++03 compliance, and uses
      it as part of the \code{CXX98} macro in file \file{etc/Makeconf}.
      For example, \option{-std=gnu++98} is selected for \command{g++}
      6.x.
    }
  }

  \subsection{INCLUDED SOFTWARE}{
    \itemize{
      \item (Windows only) Tcl/Tk version 8.6.4 is now included in the
      binary builds.  The \file{tcltk*.chm} help file is no longer
      included; please consult the online help at
      \url{http://www.tcl.tk/man/} instead.
    }
  }


  \subsection{PACKAGE INSTALLATION}{
    \itemize{
      \item There is support for compiling C++14 code in packages on
      suitable platforms: see \sQuote{Writing R Extensions} for how to
      request this.
    }
  }

  \subsection{UTILITIES}{
    \itemize{
      \item Running \command{R CMD check --as-cran} with
      \env{_R_CHECK_CRAN_INCOMING_REMOTE_} false now skips tests that
      require remote access.  The remaining (local) tests typically
      run very quickly compared to the remote tests.
    }
  }

  \subsection{DEPRECATED AND DEFUNCT}{
    \itemize{
      \item (Windows only) Function \code{setInternet2()} is defunct.

      \item Installation support for \code{readline} emulations based on
      \code{editline} (aka \code{libedit}) is deprecated.
    }
  }
